@@ -1,0 +1,42 @@
+<html>
+<body>
+
+The quick brown fox jumps over the lazy dog H<sub>2</sub>O The quick brown fox jumps over the lazy dog
+The quick brown fox jumps over the lazy dog H<sub>2</sub>O The quick brown fox jumps over the lazy dog
+The quick brown fox jumps over the lazy dog H<sup><img src="foo.png"></img></sup>O The quick brown fox jumps over the lazy dog
+H<sub>The quick brown fox jumps over the lazy dog</sub>O The quick brown <sup>fox <sup>jumps over</sup> the</sup> lazy dog
+<br>
+The quick brown fox jumps over the lazy dog H<sub>2<sup>4<sup>5</sup></sup></sub>O The quick brown fox jumps over the lazy dog
+The quick brown fox jumps over the lazy dog H<sub>2<sup>5</sup></sub>O The quick brown fox jumps over the lazy dog
+The quick brown fox jumps over the lazy dog H<sub><img src="foo.png"></sub>O The quick brown fox jumps over the lazy dog
+The quick brown fox jumps over the lazy dog H<sub>2<sub>4</sub></sub>O The quick brown fox jumps over the lazy dog
+
+<br>
+
+<br>
+
+<img src="foo.png"><sup>tm</sup>
+
+<br>
+1<sup>2<sup>3<sup><a href="foo.html">link</a></sup></sup></sup>
+<br>
+x<sup>2</sup> + y<sup>2</sup> = r<sup>2</sup>
+<br>
+e<sup>sqrt(x<sup>2</sup> + y<sup>2</sup>)</sup>
+<br>
+log<sub>2</sub>5 = y<sup>3</sup>
+<br>
+Intel<sup>tm</sup>
+<br>
+Windows<sup>&copy;</sup>
+<br>
+tst<sup>test</sup> me
+<br>
+<br>
+
+<font size=36>tst<sub>tst<sub>tst</sub></sub> me</font>
+
+<br>
+
+</body>
+</html>
